@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.virginradio" name="Virgin Radio" version="1.0.0" provider-name="NeverWise">
+<addon id="plugin.virginradio" name="Virgin Radio" version="1.0.1" provider-name="NeverWise">
   <requires>
-    <import addon="xbmc.python" version="1.0.3"/>
-    <import addon="script.neverwise" version="1.0.0"/>
+    <import addon="xbmc.python" version="2.1.0"/>
+    <import addon="script.neverwise" version="1.0.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>audio video</provides>
