@@ -1,2 +1,6 @@
+[B]Version 1.0.1[/B]
+- Fixed bug: now videos played correctly.
+- Updated radio streams.
+
 [B]Version 1.0.0[/B]
 - Initial version.
